# Edit-Count

./: .travis.yml  Cargo.toml  README.md  folder_compare.py  index.html  script.js  style.css
src/: counter.rs  crawler.rs  directory_layout.rs  directory_watcher.rs  listener.rs  main.rs  settings.rs  ui_server.rs  worker.rs
src/directory_watcher/: counter.rs  crawler.rs  directory_layout.rs  listener.rs  mod.rs
src/ui_server/: websockets_server.rs
