[package]
name = "edit_count"
version = "0.1.0"
authors = ["Kinnon McAlister <kinnonmcalister@gmail.com>"]
edition = "2018"

[dependencies]
gotham = "^0.3.0"
app_dirs = "^1.2.1"
config = "^0.9.1"
serde = "^1.0"
serde_derive = "^1.0"
lazy_static = "^1.2.0"
regex = "^1"
notify = "^4.0.0"
websocket = { version = "0.22", features = ["async"] }
json = "^0.11.13"
derive-new = "0.5"
failure = "0.1.5"
futures = "0.1"
tokio = "0.1.15"
